deleted dead file, fixed overflow & refactored apt store function

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   font-size: 30px;
   color: black;
   background: #48611b;
+  overflow: auto;
 }
 
 /*list-page header*/
